adjusted and focused changes around simplifying DC, code cleanup to keep kit simple and major push prepping for a 0.1 release